refactor: enhance parallel execution configuration in maven-surefire-plugin