@@ -282,6 +282,16 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>-Duser.timezone=UTC</argLine>
+<!--                    <argLine>-Xmx2048m -XX:MaxMetaspaceSize=512m</argLine>-->
+                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
+                    <properties>
+                        <configurationParameters>
+                            junit.jupiter.execution.parallel.enabled = true
+                            junit.jupiter.execution.parallel.mode.default = concurrent
+                            junit.jupiter.execution.parallel.config.strategy = fixed
+                            junit.jupiter.execution.parallel.config.fixed.parallelism = 4
+                        </configurationParameters>
+                    </properties>
                 </configuration>
             </plugin>
             <plugin>
